fix: making text left aligned

--- a/client/components/LanguageDropdown/LanguageDropdown.module.css
+++ b/client/components/LanguageDropdown/LanguageDropdown.module.css
@@ -7,6 +7,7 @@
   border: 1px solid #ccc;
   border-radius: 10px;
   padding: 10px;
+  text-align: left;
 }
 
 .languagesInput {
